interpreter/examples/good/less_simple/function_assignment1.dl
{
    function f(x) return 1,
    function g(x) return 2
    .
    f = g;
    print f(1)
}
