interpreter/examples/bad/type/mismatch2.dl
{
    bool x.
    x = 1
}
